Bug 40269 - Document requirements for developing Ant tasks in self hosting workspace

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_developing.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_developing.htm
@@ -15,10 +15,10 @@ Developing tasks and types
 Developing Ant tasks and types within Eclipse</h2>
 <p>The following guidelines should be followed when developing and debugging Ant 
   tasks and types within Eclipse. These requirements stem from the fact that Ant 
-  tasks and types will be loaded by an Ant classloader, rather than a plug-in 
-  classloader, when an Ant is run in the same VM as Eclipse. To avoid having the 
+  tasks and types must be loaded by the Ant classloader, rather than a plug-in 
+  classloader, when Ant is run in the same VM as Eclipse. To avoid having the 
   Ant tasks and types loaded by a plug-in classloader, the tasks and types need 
-  to be stored in a location that is not visible to the plug-in classloader. Also 
+  to be stored in a location that is not visible to any plug-in classloader. Also 
   see <a href="ant_contributing_task.htm">Contributing tasks and types</a>.
 <ul>
   <li> Contributed Ant tasks or types should be defined in their own source folder 
@@ -27,9 +27,9 @@ Developing Ant tasks and types within Eclipse</h2>
   <li>Each source folder containing the Ant tasks and types should have its own 
     output location that does not overlap with the output location of the regular 
     plug-in classes.</li>
-  <li>When testing/debugging the new Ant tasks or types, the the Run-time workspace 
+  <li>When testing/debugging the new Ant tasks or types, the Run-time workspace 
     launch configuration must be configured to <b>exclude</b> the output locations 
-    containing Ant tasks and types. This is achieved by removing the Ant output 
+    containing the Ant tasks and types. This is achieved by removing the Ant output 
     directories in the listing of the <b>Classpath Entries (-dev)</b> field on 
     the <b>Arguments</b> tab of a Run-time Workbench launch configuration.</li>
 </ul>
