--- a/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/eclipse_3_0_porting_guide.html
+++ b/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/eclipse_3_0_porting_guide.html
@@ -11,13 +11,13 @@
 <body>
 
 <h1>Eclipse 3.0 Porting Guide</h1>
-<p>Draft for 3.0 M3<br>
-Last revised August 25, 2003</p>
-<p>Eclipse 3.0 is not fully compatible with 2.0 and 2.1. The decision to break
-compatibility was taken to give us additional freedom to innovate and make
-Eclipse 3.0 significantly better than it could have been had we tried to
-maintain compatibility. That said, most of the Eclipse APIs are the same in 3.0
-as in 2.1. We have only broken APIs in 3.0 when there is a compelling case for
+<p>Draft for 3.0 M4<br>
+Last revised October 7, 2003</p>
+<p>Eclipse 3.0 is not fully compatible with 2.0 and 2.1. The nature and scope of some of the key
+3.0 plan items were such that the 
+  only feasible solutions break compatibility. The decision to make these breaking changes
+was done after open discussion with the community. That said, most of the Eclipse APIs are the same in 3.0
+as in 2.1 and 2.0. We have only broken APIs in 3.0 when there is a compelling case for
 doing so, and have tried to do it in a controlled way that minimizes the effort
 required to port an existing plug-in to the 3.0 APIs. This porting guide covers
 all areas of breaking API changes, and describes how to port existing 2.1
@@ -26,22 +26,22 @@ plug-ins to 3.0.</p>
 Porting Guide is being included with each milestone build to facilitate climbing
 aboard the 3.0 release wagon at an early stage, or to estimate the amount of
 effort that will be involved in eventually porting existing plug-ins to 3.0. The
-Eclipse APIs will be stable by milestone M5 (see <a href="http://www.eclipse.org/eclipse/development/eclipse_project_plan_3_0.html">Eclipse
+Eclipse APIs will be stable with respect to breaking changes by late 2003 (see <a href="http://www.eclipse.org/eclipse/development/eclipse_project_plan_3_0.html">Eclipse
 3.0 plan</a> for exact dates).</i></p>
 <h2>General Information on Compatibility</h2>
 <p><b>API Contract Compatibility:</b> Eclipse SDK 3.0 is upwards
 contract-compatible with Eclipse SDK 2.0 and 2.1 except in those areas noted
-below. This means that programs in full compliance with contracts specified in
-Eclipse SDK 2.0 or 2.1 APIs will need to be ported to Eclipse SDK 3.0 APIs. (API
+below. Programs that use affected APIs and extension points 
+  will need to be ported to Eclipse SDK 3.0 APIs (API
 is construed broadly to include such things as plug-in extension points.)
 Downward contract compatibility is not supported. There is no guarantee that
 compliance with Eclipse SDK 3.0 APIs would ensure compliance with Eclipse SDK
 2.0 or 2.1 APIs. Refer to <i><a href="http://eclipse.org/eclipse/development/java-api-evolution.html">Evolving
 Java-based APIs</a></i> for a discussion of the kinds of API changes that
 maintain contract compatibility.
-<p><b>Binary (plug-in) Compatibility:</b> Eclipse SDK 3.0 is not upwards
-binary-compatible with Eclipse SDK 2.0 and 2.1. Plug-ins built for Eclipse SDK
-2.0 or 2.1 will need to be ported and recompiled for Eclipse SDK 3.0. Downward
+<p><b>Binary (plug-in) Compatibility:</b> Eclipse SDK 3.0 is upwards binary-compatible 
+  with Eclipse SDK 2.0 and 2.1 except in those areas noted below. Plug-ins that use affected APIs and extension points 
+  will need to be ported and recompiled for Eclipse SDK 3.0. Downward
 plug-in compatibility is not supported either. Plug-ins for Eclipse SDK 3.0 will
 not be usable in Eclipse SDK 2.0 or 2.1. Refer to <i><a href="http://eclipse.org/eclipse/development/java-api-evolution.html">Evolving
 Java-based APIs</a></i> for a discussion of the kinds of API changes that
