Fix copyright notice

--- a/bundles/org.eclipse.platform.doc.isv/porting/eclipse_3_0_porting_guide.html
+++ b/bundles/org.eclipse.platform.doc.isv/porting/eclipse_3_0_porting_guide.html
@@ -1050,7 +1050,8 @@ unsupportable and receive no guarantees about compatibility within a single
 release much less with an earlier releases. Refer to <i><a href="http://www.eclipse.org/articles/Article-API%20use/eclipse-api-usage-rules.html">How
 to Use the Eclipse API</a></i> for information about how to write compliant
 plug-ins. This porting guide does not cover non-API methods and classes.</p>
-<p>(c) Copyright IBM Corp. and others 2003</p>
+
+<p><a href="../hglegal.htm"><img src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="250" height="12"></a></p>
 
 </body>
 
