Changed Display.getDefault() to be just display.

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
@@ -100,7 +100,7 @@ The following code snippet demonstrates the pattern for using these methods:</P>
    ...
    // now update the UI. We don't depend on the result,
    // so use async.
-   Display.getDefault ().asyncExec (new Runnable () {
+   display.asyncExec (new Runnable () {
       public void run () {
          myWindow.redraw ();
       }
